[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yt-extract"
version = "0.1.0"
description = "Fetch YouTube video metadata via the Data API v3 and print a table."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28.0",
    "tabulate>=0.9.0",
]

[project.scripts]
yt-extract = "yt_extract.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["yt_extract*"]
